Fixed issues with hero img margin on mobile devices. Change theme to dark mode

--- a/css/style.css
+++ b/css/style.css
@@ -278,6 +278,11 @@ a {
     font-weight: 600;
 }
 
+.hero__img {
+    margin-left: 30px;
+    margin-right: 20px;
+}
+
 .hero__img img {
     width: 100%;
     clip-path: polygon(0% 0%, 70% 0%, 100% 50%, 70% 100%, 0% 100%);
